@@ -1693,7 +1693,7 @@ movefile(tmp_templates, output_file_temp)
 h5create(output_file_temp, '/limits', size(transpose(handles.AmpLim)));
 h5write(output_file_temp, '/limits', transpose(handles.AmpLim));
 h5create(output_file_temp, '/maxoverlap', size(transpose(overlap)));
-h5write(output_file_temp, '/maxoverlap', transpose(overlap));
+h5write(output_file_temp, '/maxoverlap', transpose(overlap)*handles.templates_size(1) * handles.templates_size(2));
 h5create(output_file_temp, '/tagged', size(transpose(handles.Tagged)));
 h5write(output_file_temp, '/tagged', transpose(handles.Tagged));
 for id=1:nb_templates
